--- a/src/presentacion/IFrmListaSucursal.form
+++ b/src/presentacion/IFrmListaSucursal.form
@@ -50,11 +50,13 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lblOrdenar" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="rbtnCodigo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="rbtnNombre" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblOrdenar" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="rbtnCodigo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="rbtnNombre" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane1" pref="330" max="32767" attributes="0"/>
